VS Dateien aktualisiert
Auf 2012 Version aktualisiert

--- a/Uebung1/skeleton/cg1_ex1.vcxproj.filters
+++ b/Uebung1/skeleton/cg1_ex1.vcxproj.filters
@@ -21,30 +21,30 @@
     <ClCompile Include="node.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="cg1_ex1.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="robot.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="scenegraph.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="robot.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="scenegraph.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="win32\glut.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="context.h">
+    <ClInclude Include="Context.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="node.h">
+    <ClInclude Include="Node.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Robot.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Scenegraph.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
