Der Robo hat jetzt Füße
Ich habe keine Idee warum doublebuffering gerade in der Aufgabe
verwendet wird.
Das mit dem TrackBall müsst ihr mir noch mal erklären. Und wenn ihr
wisst warum der Gimbal Lock nur passiert, wenn man die Y-Achse eindreht
wär ich auch interessiert.

--- a/Uebung1/skeleton/cg1_ex1.vcxproj
+++ b/Uebung1/skeleton/cg1_ex1.vcxproj
@@ -18,7 +18,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v110</PlatformToolset>
+    <PlatformToolset>v100</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
@@ -85,6 +85,9 @@
     <ClInclude Include="Robot.hpp" />
     <ClInclude Include="Scenegraph.hpp" />
     <ClInclude Include="win32\glut.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
