--- a/Uebung3/skeleton-cg1_ex3/Makefile.linux
+++ b/Uebung3/skeleton-cg1_ex3/Makefile.linux
@@ -1,7 +1,7 @@
 EXECUTABLE= cg1_ex3
 CC= g++
 CPPFLAGS= -O3 -Iglm/
-DEPS= glm/glm.hpp /glm/gtc/matrix_transform.hpp Window.hpp Context.hpp GLSLShader.hpp TriMesh.hpp
+DEPS= glm/glm.hpp /glm/gtc/matrix_transform.hpp glm/gtx/unsigned_int.hpp Window.hpp Context.hpp GLSLShader.hpp TriMesh.hpp
 OBJ= Window.o Context.o  GLSLShader.o TriMesh.o Shading.o
 LIBS= -lGLU -lGL -lglut -lGLEW
 
