--- a/.gitignore
+++ b/.gitignore
@@ -215,3 +215,5 @@ pip-log.txt
 #Mr Developer
 .mr.developer.cfg
 CompGraPrjcts-master.zip
+Uebung3/skeleton-cg1_ex3/shaders/flat.geom
+Uebung3/skeleton-cg1_ex3/shaders/flat.geom
