--- a/Uebung5/skeleton-cg1_ex4-Friedrich/cg1_ex4.vcxproj.filters
+++ b/Uebung5/skeleton-cg1_ex4-Friedrich/cg1_ex4.vcxproj.filters
@@ -7,6 +7,8 @@
     <ClCompile Include="GLSLShader.cpp" />
     <ClCompile Include="TriMesh.cpp" />
     <ClCompile Include="Window.cpp" />
+    <ClCompile Include="KDNode.cpp" />
+    <ClCompile Include="BoundingBox.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Context.hpp" />
@@ -15,5 +17,7 @@
     <ClInclude Include="GLSLShader.hpp" />
     <ClInclude Include="TriMesh.hpp" />
     <ClInclude Include="Window.hpp" />
+    <ClInclude Include="KDNode.h" />
+    <ClInclude Include="BoundingBox.h" />
   </ItemGroup>
 </Project>
