BBox und KDBaum
Fertig geschrieben. Frage ist ob es funktionert.

--- a/Uebung5/skeleton-cg1_ex4 - Friedrich2/cg1_ex4.vcxproj
+++ b/Uebung5/skeleton-cg1_ex4 - Friedrich2/cg1_ex4.vcxproj
@@ -21,11 +21,11 @@
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="BoundingBox.h" />
+    <ClInclude Include="BoundingBox.hpp" />
     <ClInclude Include="Context.hpp" />
     <ClInclude Include="GLSLShader.hpp" />
     <ClInclude Include="Image.hpp" />
-    <ClInclude Include="KDNode.h" />
+    <ClInclude Include="KDNode.hpp" />
     <ClInclude Include="Texture.hpp" />
     <ClInclude Include="TriMesh.hpp" />
     <ClInclude Include="Window.hpp" />
