--- a/Uebung5/skeleton-cg1_ex4 - Friedrich2/cg1_ex4.vcxproj.filters
+++ b/Uebung5/skeleton-cg1_ex4 - Friedrich2/cg1_ex4.vcxproj.filters
@@ -17,7 +17,7 @@
     <ClInclude Include="GLSLShader.hpp" />
     <ClInclude Include="TriMesh.hpp" />
     <ClInclude Include="Window.hpp" />
-    <ClInclude Include="BoundingBox.h" />
-    <ClInclude Include="KDNode.h" />
+    <ClInclude Include="BoundingBox.hpp" />
+    <ClInclude Include="KDNode.hpp" />
   </ItemGroup>
 </Project>
