--- a/Uebung5/skeleton-cg1_ex4 - Friedrich2/cg1_ex4.vcxproj.filters
+++ b/Uebung5/skeleton-cg1_ex4 - Friedrich2/cg1_ex4.vcxproj.filters
@@ -9,6 +9,7 @@
     <ClCompile Include="Window.cpp" />
     <ClCompile Include="BoundingBox.cpp" />
     <ClCompile Include="KDNode.cpp" />
+    <ClCompile Include="Ray.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Context.hpp" />
@@ -19,5 +20,6 @@
     <ClInclude Include="Window.hpp" />
     <ClInclude Include="BoundingBox.hpp" />
     <ClInclude Include="KDNode.hpp" />
+    <ClInclude Include="Ray.hpp" />
   </ItemGroup>
 </Project>
