--- a/Uebung5/skeleton-cg1_ex4 - Friedrich2/cg1_ex4.vcxproj
+++ b/Uebung5/skeleton-cg1_ex4 - Friedrich2/cg1_ex4.vcxproj
@@ -17,6 +17,7 @@
     <ClCompile Include="Image.cpp" />
     <ClCompile Include="KDNode.cpp" />
     <ClCompile Include="Ray.cpp" />
+    <ClCompile Include="RayTraceHelper.cpp" />
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="Triangle.cpp" />
     <ClCompile Include="TriMesh.cpp" />
@@ -29,6 +30,7 @@
     <ClInclude Include="Image.hpp" />
     <ClInclude Include="KDNode.hpp" />
     <ClInclude Include="Ray.hpp" />
+    <ClInclude Include="RayTraceHelper.hpp" />
     <ClInclude Include="Texture.hpp" />
     <ClInclude Include="Triangle.hpp" />
     <ClInclude Include="TriMesh.hpp" />
