--- a/Uebung5/skeleton-cg1_ex4 - Friedrich2/cg1_ex4.vcxproj.filters
+++ b/Uebung5/skeleton-cg1_ex4 - Friedrich2/cg1_ex4.vcxproj.filters
@@ -11,6 +11,7 @@
     <ClCompile Include="KDNode.cpp" />
     <ClCompile Include="Ray.cpp" />
     <ClCompile Include="Triangle.cpp" />
+    <ClCompile Include="RayTraceHelper.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Context.hpp" />
@@ -23,5 +24,6 @@
     <ClInclude Include="KDNode.hpp" />
     <ClInclude Include="Ray.hpp" />
     <ClInclude Include="Triangle.hpp" />
+    <ClInclude Include="RayTraceHelper.hpp" />
   </ItemGroup>
 </Project>
