--- a/Uebung5/skeleton-cg1_ex4 - Friedrich2/cg1_ex4.vcxproj.filters
+++ b/Uebung5/skeleton-cg1_ex4 - Friedrich2/cg1_ex4.vcxproj.filters
@@ -12,6 +12,7 @@
     <ClCompile Include="Ray.cpp" />
     <ClCompile Include="Triangle.cpp" />
     <ClCompile Include="RayTraceHelper.cpp" />
+    <ClCompile Include="Scene.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Context.hpp" />
@@ -25,5 +26,6 @@
     <ClInclude Include="Ray.hpp" />
     <ClInclude Include="Triangle.hpp" />
     <ClInclude Include="RayTraceHelper.hpp" />
+    <ClInclude Include="Scene.hpp" />
   </ItemGroup>
 </Project>
