--- a/Uebung5/skeleton-cg1_ex4 - Friedrich2/cg1_ex4.vcxproj
+++ b/Uebung5/skeleton-cg1_ex4 - Friedrich2/cg1_ex4.vcxproj
@@ -18,6 +18,7 @@
     <ClCompile Include="KDNode.cpp" />
     <ClCompile Include="Ray.cpp" />
     <ClCompile Include="RayTraceHelper.cpp" />
+    <ClCompile Include="Scene.cpp" />
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="Triangle.cpp" />
     <ClCompile Include="TriMesh.cpp" />
@@ -31,6 +32,7 @@
     <ClInclude Include="KDNode.hpp" />
     <ClInclude Include="Ray.hpp" />
     <ClInclude Include="RayTraceHelper.hpp" />
+    <ClInclude Include="Scene.hpp" />
     <ClInclude Include="Texture.hpp" />
     <ClInclude Include="Triangle.hpp" />
     <ClInclude Include="TriMesh.hpp" />
