ignore saveFile.ppm

--- a/.gitignore
+++ b/.gitignore
@@ -217,3 +217,4 @@ pip-log.txt
 CompGraPrjcts-master.zip
 Uebung3/skeleton-cg1_ex3/shaders/flat.geom
 Uebung3/skeleton-cg1_ex3/shaders/flat.geom
+Uebung5/skeleton-cg1_ex4 - Friedrich2/saveFile.ppm
